--- a/wp-content/themes/my-theme/style.css
+++ b/wp-content/themes/my-theme/style.css
@@ -12,26 +12,32 @@ Version: 1.0
     box-sizing: border-box;
   }
   
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
-  [class*="col-"] {
-    float: left;
-    padding: 15px;
-  }
-  
   html {
     font-family: "Lucida Sans", sans-serif;
   }
+
+
+  .logo h1{
+    color: white;
+    font-size: 20px;
+    margin-left: 15px;
+  }
+
+  body{width: 100%;
+    margin: 0;
+    background-color: #f1f1f1;
+
+
+  }
   
   .header {
-    background-color: #9933cc;
+    background-image: url(https://cdn.pixabay.com/photo/2015/03/07/16/24/home-663209_1280.jpg);
+    background-position: center;
+    background-size: cover;
     color: #ffffff;
-    padding: 15px;
-    display: flex;
+    padding: 15px;    
+    height: 40vh;
+    position:relative;
   }
 
   .header img{
@@ -39,73 +45,220 @@ Version: 1.0
     height: auto;
   }
   
-  .menu ul {
+  .navigation ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    right: 0;
+  }
+  .navigation{
+    width: 100%;
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    top: 0;
+    background:linear-gradient(rgb(151, 146, 132), rgb(116, 112, 101)) ;
+    z-index: 3;
+    align-items: center;
+    padding: 0 15px;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.432);
+    
+    /* height: 100vh; */
   }
   
-  .menu li {
-    padding: 8px;
-    margin-bottom: 7px;
-    background-color: #33b5e5;
-    color: #ffffff;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  .navigation li {
+    margin: 10px;
+    /* margin-bottom: 7px; */
+
   }
   
-  .menu li:hover {
-    background-color: #0099cc;
+  .navigation li a {
+    text-decoration: none;
+    padding: 3px 15px;
+    color: white;
+    transition: 0.1s;
+  }
+
+  .navigation li a:hover {
+    border-bottom: 3px solid white;
   }
   
+  .custom-logo-link img {
+    height:40px ;
+    width: auto;
+  }
   .aside {
-    background-color: #33b5e5;
+    background-color: #79756b;
     padding: 15px;
     color: #ffffff;
     text-align: center;
     font-size: 14px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
+
+  .aside ul{
+    list-style: none;
+    padding: 10px;
+    text-align: start;
+  }
+  .aside li{
+    padding: 10px;
+    transition: 0.1s;
+  }
+  .aside li:hover{
+    padding: 10px;
+    background-color: #00000015;
+  }
+
+
   
   .footer {
-    background-color: #0099cc;
+    background:linear-gradient(rgb(151, 146, 132), rgb(116, 112, 101)) ;
     color: #ffffff;
     text-align: center;
     font-size: 12px;
     padding: 15px;
   }
+
+
+  .logo{
+    display: flex;
+    align-items: center;
+  }
   
-  /* For mobile phones: */
-  [class*="col-"] {
+  .main-container{
+    display: flex;
     width: 100%;
   }
-  
-  @media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-s-1 {width: 8.33%;}
-    .col-s-2 {width: 16.66%;}
-    .col-s-3 {width: 25%;}
-    .col-s-4 {width: 33.33%;}
-    .col-s-5 {width: 41.66%;}
-    .col-s-6 {width: 50%;}
-    .col-s-7 {width: 58.33%;}
-    .col-s-8 {width: 66.66%;}
-    .col-s-9 {width: 75%;}
-    .col-s-10 {width: 83.33%;}
-    .col-s-11 {width: 91.66%;}
-    .col-s-12 {width: 100%;}
+
+  .article{
+    width: 55%;
+    margin: 10px 10%;
+
+ 
   }
-  @media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+
+  .article-content{
+    padding: 15px;
+    margin : 15px 0;
+
+    background-color: #eeeeee;
+    border-radius: 8px;
+    border: 1px solid #9c9688;
+    box-shadow: -2px 3px 3px rgba(0, 0, 0, 0.432);
+    overflow: hidden;
+
+  }
+
+  .article img {
+    width: 100%;
+    height: auto;
+border-radius: 8px;
+  }
+
+  .aside{
+    width: 25%;
+    height: 100vh;
+    position: sticky;
+    top: 48px;
+    color: white;
+    
+
+  }
+
+  .aside a {
+    color: white;
+    text-decoration: none;
+  }
+
+
+
+  .nav-mobile{
+    text-align: end; 
+    display: none;
+    position: relative;
+
+ }
+
+ .nav-mobile svg{
+margin-right: 20px;
+}
+
+  .nav-mobile ul{
+    flex-direction: column;
+text-align: end;
+padding-left: 30px;
+ }
+
+ #navToggle{
+  /* display: none;  */
+position: absolute;
+height: 100vh;
+background:linear-gradient(rgb(151, 146, 132), rgb(116, 112, 101)) ;
+transition: 0.3s;
+ }
+
+ .navToggleOn{
+  transform: translate(-80px, 8px);
+ }
+
+ .navToggleOff{
+  
+  transform: translate(80px, 8px);
+ }
+
+  @media only screen and (max-width: 1200px) {
+
+    .article{
+      width: 70%;
+      margin: 0 5%;
+    }
+
+ 
+
+  }
+
+  @media only screen and (max-width: 1000px) {
+    .main-container{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+    .aside{
+      width: 100%;
+      height: auto;
+      position: sticky;
+      top: 48px;
+  
+    }
+
+    .aside ul {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .article{
+      width: 80%;
+      margin: 0 10%;
+      padding: 0;
+    }
+
+    .nav-desktop{
+      display: none;
+    }
+
+    .nav-mobile{
+      display: block;
+  
+   }
+
+  }
+  @media only screen and (max-width: 768px) {
+    .article{
+      width: 90%;
+      margin: 5%;
+      padding: 0;
+    }
   }
